--- a/template/home/base.html
+++ b/template/home/base.html
@@ -8,6 +8,15 @@
     <meta name="description" content="IE=edge">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PNTFD95ESB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PNTFD95ESB');
+</script>
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 {% block blog_css %}
     
