--- a/template/dashboard/partials/navbar.html
+++ b/template/dashboard/partials/navbar.html
@@ -4,9 +4,9 @@
     <!-- Navbar Right Menu-->
     <ul class="app-nav">
       <li class="app-search">
-        <input class="app-search__input" type="search" placeholder="Search">
-        <form method="get">
-          <!-- {{ filter.form.as_p }} -->
+
+        <form method="get" action="{% url 'search' %}">
+          <input class="app-search__input" type="text" name="username__icontains"  placeholder="Search">
         <button class="app-search__button"><i class="fa fa-search"></i></button>
       </form>
       </li>
