--- a/template/home/base.html
+++ b/template/home/base.html
@@ -144,7 +144,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
                             tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet,
                             consectetuer adipiscing eli.</p>
-                        <a href="#" class="btn medilife-btn mt-50">View the services <span>+</span></a>
+                        <!-- <a href="#" class="btn medilife-btn mt-50">View the services <span>+</span></a> -->
                     </div>
                 </div>
                 <div class="col-12 col-lg-8">
