--- a/template/home/blog_view/home_page_view.html
+++ b/template/home/blog_view/home_page_view.html
@@ -39,7 +39,7 @@ Home Page
             <div class="col-12 col-sm-6 col-lg-3">
                 <div class="single-cool-fact-area text-center mb-100">
                     <i class="icon-blood-transfusion-2"></i>
-                    <h2><span class="counter">5632</span></h2>
+                    <h2><span class="counter">{{ total_donation }}</span></h2>
                     <h6>Blood donations</h6>
                     <p>Dolor sit amet, consecte tuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
                 </div>
@@ -48,8 +48,8 @@ Home Page
             <div class="col-12 col-sm-6 col-lg-3">
                 <div class="single-cool-fact-area text-center mb-100">
                     <i class="icon-atoms"></i>
-                    <h2><span class="counter">23</span>k</h2>
-                    <h6>Pacients</h6>
+                    <h2><span class="counter">{{ total_post }}</span></h2>
+                    <h6>Total Post</h6>
                     <p>Dolor sit amet, consecte tuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
                 </div>
             </div>
@@ -66,8 +66,8 @@ Home Page
             <div class="col-12 col-sm-6 col-lg-3">
                 <div class="single-cool-fact-area text-center mb-100">
                     <i class="icon-doctor-1"></i>
-                    <h2><span class="counter">723</span></h2>
-                    <h6>Doctors</h6>
+                    <h2><span class="counter">{{ total_user }}</span></h2>
+                    <h6>Users</h6>
                     <p>Dolor sit amet, consecte tuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
                 </div>
             </div>
