--- a/template/dashboard/users/search.html
+++ b/template/dashboard/users/search.html
@@ -1,16 +1,14 @@
 {% extends 'dashboard/base.html' %}
 {% block 'main_body' %}
 <main class="app-content">
-
-        <form method="get">
-                {{ filter.form.as_p }}
-                <button type="submit">Search</button>
-              </form>
               <table class="table table-striped table-dark">
              <tbody>
               {% for user in filter.qs %}
                 <!-- <li <a href=" {% url 'signle_user' user.id %} "> >{{ user.username }}</li> -->
-                    <td><a href=" {% url 'signle_user' user.id %} ">{{ user.username }}</a></td>
+                  <tr>
+                  
+                  <td><a href=" {% url 'signle_user' user.id %} ">{{forloop.counter}}. {{ user.username }}</a></td>
+                  </tr>
               {% endfor %}
             </tbody>
         </table>
