Home bolg post filtering bug fixed

--- a/template/dashboard/users/single_user.html
+++ b/template/dashboard/users/single_user.html
@@ -55,7 +55,7 @@
       <div class="col-sm-3">
           <div style="width: 200px;height: 200px; border-radius: 50%; border: 1px dashed black;padding: 20px; 
           position: relative;">
-              <img class="card-img-top" src="http://cdn.onlinewebfonts.com/svg/img_568657.png" 
+              <img class="card-img-top" src="{{single_user.image.url}}" 
                style="width: 100%; height: auto; max-height: 100%; z-index: -1;" alt="Card image cap">
           </div>
       </div>
