--- a/template/home/partials/menu_area.html
+++ b/template/home/partials/menu_area.html
@@ -31,7 +31,7 @@
       >
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Blood Bank</a>
+        <a class="nav-link" href="{% url 'blood:bank-list' %}">Blood Bank</a>
       </li>
       <li class="nav-item">
         <!-- {% if user.is_staff %}
