--- a/orders/templates/order/created.html
+++ b/orders/templates/order/created.html
@@ -9,11 +9,11 @@ Your Shopping Cart| Thank you
 <div style="height: 150px;"> </div>
 <div class="container">
     <div class="row" style="margin-top: 6%">
-        <div class="col-md-9 col-md-offset-2">
+        <div class="col-md-10 col-md-offset-2">
             <h3 class="page-header">Thank You For Shopping With Us
             </h3>
-            <p><h6>Your order has been successfully completed. Your order number
-                    is <u><h4>{{ order.id }}</h4></u></h6>.</p>
+            <p><h6>Your order has been successfully completed. Your order
+                    numberis <u> {{ order.id }}</u></h6>.</p>
         </div>
     </div>
 </div>
