--- a/template/bank/bank-index.html
+++ b/template/bank/bank-index.html
@@ -13,16 +13,14 @@
                 {% endif %}
                 <div class="card-body">
                     <h5 class="card-title">{{bank.name}}</h5>
-                    <p class="card-text">Some quick example text to build on the
-                        card title and
-                        make up the bulk of the card's content.</p>
+                    <p class="card-text">{{bank.location}}</p>
                     <a href="#" class="btn
                         btn-primary">
                         Details </a>
                 </div>
                 <div class="card-footer">
                     <small class="text-muted">created at:
-                        <!-- {{album.was_published_recently}} -->
+                        {{ bank.created_at}}
                     </small>
                 </div>
             </div>
