--- a/blood/templates/bank/detail.html
+++ b/blood/templates/bank/detail.html
@@ -25,7 +25,7 @@
                                 <h6><a href="{{
                                         product.category.get_absolute_url }}">{{
                                         product.category }}</a></h6>
-                                <p class="text-muted">Kshs. {{ product.price }}</p>
+                                <p class="text-muted">TK. {{ product.price }}</p>
                                 <form action="{% url 'cart:cart_add' product.id
                                     %}" method="post">
                                     {% csrf_token %}
