--- a/blood/templates/bank/index.html
+++ b/blood/templates/bank/index.html
@@ -4,6 +4,18 @@
 
 
 <div style="height: 150px;"> a</div>
+
+</div>
+<form action="{% url 'blood:bank-search' %}" method="GET" value="{{request.GET.q}}">
+        Search <input type="text" name="q" value="{{request.GET.q}}" placeholder="Search posts"/>
+        <input type="submit" name="submit" value="Search"/>
+        </form>
+
+
+
+
+
+
 {% if bank_list %}
 
 <div class="card-deck">
@@ -11,14 +23,13 @@
     <div class="col-sm-4 col-lg-4 col-xl-4 pb-1">
         <div class="card h-100 bg-light mb-3">
             {%if bank.logo %}
-            <img src="{{ bank.logo.url }}" class="card-img-top"
-                height="220px">
+            <a href="{{bank.get_absolute_url}}"><img src="{{ bank.logo.url }}"
+                    class="card-img-top"
+                    height="220px"></a>
             {%endif%}
             <div class="card-body">
                 <h5 class="card-title">{{bank.name}}</h5>
-                <p class="card-text">Some quick example text to build on the
-                    card title and
-                    make up the bulk of the card's content.</p>
+                <p class="card-text">Location: {{bank.location}} </p>
                 <a href="{{bank.get_absolute_url}}"
                     class="btn
                     btn-primary">
